--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "react-cookie": "^4.1.1",
     "react-dom": "18.2.0",
     "sass": "^1.54.0",
-    "scss": "^0.2.4"
+    "scss": "^0.2.4",
+    "socket.io": "^4.5.1",
+    "socket.io-client": "^4.5.1",
+    "websocket": "^1.0.34"
   },
   "devDependencies": {
     "@types/node": "18.6.2",
